# concord232

./: .coverage  .git-branches.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TESTING.md  TODO.md  concord232_client  concord232_server  config.ini  coverage.xml  diagram.mermaid  edg_rawmode.conf  edg_rfc2217fixed.conf  lefthook.yml  pyproject.toml  repository.yaml  setup.py  skiller  start_server.sh  status_p3.py
.claude/skills/: dev-git-town  dev-xp_work
.codex/skills/dev/: git-town  xp_work
.cursor/skills/dev/git-town/: SKILL.md  USAGE.md
.cursor/skills/dev/git-town/cursor/: git-town.md
.cursor/skills/dev/xp_work/: SKILL.md  USAGE.md
.cursor/skills/dev/xp_work/cursor/: xp_work.md
.cursor/skills/release-ha-app/: SKILL.md
.cursor/skills/release-ha-app/scripts/: check_versions.py
.github/workflows/: ci.yml  workflow.yml
.skills/dev/: git-town.json  xp_work.json
addon-concord232/: DOCS.md  build.yaml  config.yaml
addon_concord232/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  run.sh
concord232/: __init__.py  api.py  client.py  concord.py  concord_alarm_codes.py  concord_commands.py  concord_helpers.py  concord_tokens.py  mail.py  main.py  model.py  mqtt_events.py
concord232/client/: client.py
concord232/exclude/: ser2net.conf
concord232/server/: api.py
docs/: mkdocs.yml
docs-site/docs/: ha-integration-gaps.md  ha-mqtt-partition-alarm-entities-design.md  migration-mac-mini-to-ha-yellow.md  mqtt-panel-events-design.md  panel-trouble-state.md  ser2net-8o1-wiring.md  testing-localhost-concord232.md  testing-rfc2217.md  testing-superbus.md
docs-site/docs/plans/: 2026-04-13-mqtt-panel-events-implementation-plan.md
docs/docs/: api.md
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/site/api/: index.html
docs/site/search/: search_index.json
homeassistant/concord232/: run.sh
scripts/: test_ha_yellow.py  test_rfc2217.py  test_superbus.py
tests/: test_client.py  test_concord_commands.py  test_concord_helpers.py  test_model.py
tests/client/: test_cli.py  test_client.py
tests/concord/: test_api.py  test_client_api.py  test_concord.py  test_concord_commands.py  test_concord_helpers.py  test_concord_tokens.py  test_message_handlers.py  test_model_core.py  test_mqtt_events.py  test_trouble_state.py
tests/model/: test_model.py
work/: ACCEPTANCE.md  BUGS.md  DEFERRED.md  IMPROVEMENTS.md  ITERATION.md  TECH_DEBT.md  TODO.md  USER_GOALS.md
(+8 files in other folders)
