[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest"
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".venv",
    "concord232.egg-info",
    "__pycache__",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "concord232.egg-info", "__pycache__"]

[tool.mkdocs]
# MkDocs configuration section (if not present)

[project]
name = "concord232"
version = "0.1.0"
description = "A Python project for Concord 232 integration."

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]